feat: graphiql 지원

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
+<html lang="en">
+<head>
+  <link href="https://unpkg.com/graphiql/graphiql.min.css" rel="stylesheet" />
+  <script crossorigin src="https://unpkg.com/graphiql/graphiql.min.js"></script>
+  <title>Graphql!</title>
+</head>
 <body>
 <h1>Graphql!</h1>
 <h2 id="title"></h2>
